# PolyPitch

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
Examples/: analysisoftrails.scd  chromagram.scd
PolyPitch/HelpSource/Classes/: PolyPitch.schelp
source/: CalculateFFT.cpp  CalculateFFT.h  GammatoneFilterBank.cpp  GammatoneFilterBank.h  MultipitchHeader.h  PeriodicityAnalysis.cpp  PeriodicityAnalysis.h  PolyPitch.cpp  PolyPitchUGen.cpp  PolyPitchUGen.h
